src/test/ui/fmt/format-string-error.stderr
error: invalid format string: expected `'}'` but string was terminated
  --> $DIR/format-string-error.rs:12:5
   |
LL |     println!("{");
   |     ^^^^^^^^^^^^^^ expected `'}'` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: invalid format string: unmatched `}` found
  --> $DIR/format-string-error.rs:14:5
   |
LL |     println!("}");
   |     ^^^^^^^^^^^^^^ unmatched `}` in format string
   |
   = note: if you intended to print `}`, you can escape it using `}}`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: invalid format string: invalid argument name `_foo`
  --> $DIR/format-string-error.rs:15:23
   |
LL |     let _ = format!("{_foo}", _foo = 6usize);
   |                       ^^^^ invalid argument name in format string
   |
   = note: argument names cannot start with an underscore

error: invalid format string: invalid argument name `_`
  --> $DIR/format-string-error.rs:17:23
   |
LL |     let _ = format!("{_}", _ = 6usize);
   |                       ^ invalid argument name in format string
   |
   = note: argument names cannot start with an underscore

error: invalid format string: expected `'}'` but string was terminated
  --> $DIR/format-string-error.rs:19:23
   |
LL |     let _ = format!("{");
   |                       ^ expected `'}'` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: invalid format string: unmatched `}` found
  --> $DIR/format-string-error.rs:21:22
   |
LL |     let _ = format!("}");
   |                      ^ unmatched `}` in format string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: invalid format string: expected `'}'`, found `'/'`
  --> $DIR/format-string-error.rs:23:23
   |
LL |     let _ = format!("{/}");
   |                       ^ expected `}` in format string

error: aborting due to 7 previous errors

